--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@
                     </p>
                 </div>
                 <div class="col-md-4 footer-box">
-                    <p id="contact"><b>LOKACIJA</b></p>
-                    <p><i class="fa fa-map-marker"></i>Kurta Schorka 36, 71210 Sarajevo</p>
-                    <p><i class="fa fa-phone"></i>+387 33 123 456</p>
-                    <p><i class="fa fa-envelope-o"></i>info@sky.com</p>
+                    <p id="contact"><b>KONTAKT</b></p>
+                    <p>Kurta Schorka 36, 71210 Sarajevo</p>
+                    <p>+387 33 123 456</p>
+                    <p>info@sky.com</p>
                 </div>
                 <div class="col-md-4 footer-box">
                     <p><b>SOCIAL</b></p>
